# alac_converter

./: CMakeLists.txt  README.md
include/: FolderInfo.h  Processor.h  disk_info.h  log.h
src/: FolderInfo.cpp  Processor.cpp  disk_info.cpp  log.cpp  main.cpp
